# Qt_Projects

./: README.md
06-UserInput/: CMakeLists.txt  LabeledTextInput.qml  Main.qml  Main2_LabeledTextInput.qml  Main3_EditableText.qml  MouseArea_05.qml  main.cpp
10_ScreenShot_app/: CMakeLists.txt  main.cpp  mainwindow.ui
2-1-Qml_Syntax/: CMakeLists.txt  Main.qml  main.cpp
3-1-Rectangle_item_text/: CMakeLists.txt  Main-Item.qml  Main2.qml  main.cpp
3-4-qt_add_resource/: CMakeLists.txt  Main.qml  main.cpp
3-Exploring-dataTypes/: CMakeLists.txt  Main.qml  main.cpp
4-1-Custom_Component/: CMakeLists.txt  MButtom.qml  Main.qml  Main2.qml  main.cpp
4-Qt_property_binding/: CMakeLists.txt  Main.qml  main.cpp
5-10_Signals_Across_Components/: CMakeLists.txt  Main.qml  Notifier.qml  Reciver.qml  main.cpp
5-11_Multiple_signal_parameters/: CMakeLists.txt  Main.qml  main.cpp
5-2-Signal_handler/: Attached_signal_handler.qml  CMakeLists.txt  Connecting_a_signal_to_a_signal_5_9.qml  Conneteting_a_signal_to_a_method_5_8.qml  Custom_Signal_5_7.qml  Main.qml  Main2_Connection.qml  main.cpp
5-Qt_Global_object/: CMakeLists.txt  Main.qml  main.cpp
6-Qt_Property_change_handler/: CMakeLists.txt  Main.qml  main.cpp
